--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/c08_mobile?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=khanh0901147093
+spring.datasource.password=24122004L
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
